# ENGAGE

./: CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: codeql-buildscript.sh
enclosure/: ENGAGE-Bottom.stl  ENGAGE-Button.stl  ENGAGE-DPad.stl  ENGAGE-LCD-Holder.stl  ENGAGE-Small-Button.stl  ENGAGE-Top.stl
hardware/apollo-3-module/: apollo-3-module-bill-of-materials.csv  apollo3_module.kicad_pcb  apollo3_module.pro  apollo3_module.sch
hardware/main-board/: Display.sch  MCU.sch  USB_PSU.sch  button_harv.sch  cartridge.sch  harvester.sch  main-board-bill-of-materials.csv  main-board.kicad_pcb  main-board.pro  main-board.sch
software/: CMakeLists.txt  CPPLINT.cfg
software/apps/: CMakeLists.txt
software/apps/checkpoint/: CMakeLists.txt  checkpoint_test.c
software/apps/checkpoint/config/: checkpoint_content.h
software/apps/emulator/: CMakeLists.txt  main_emulator.c
software/apps/emulator/config/: checkpoint_content.h
software/apps/memtracker/: CMakeLists.txt  main_memtracker.c
software/config/: apollo-toolchain.cmake  apollo3.ld  emulator_settings.h  exclude_checkpoint_bss.ld  exclude_checkpoint_data.ld  startup_gcc.c  stm32f7xx.h  stm32f7xx_hal.h
software/libs/buttons/: buttons.c  buttons.h
software/libs/cartridge/: cartridge.c  cartridge.h  reader.c  reader.h
software/libs/display/: display.c  display.h
software/libs/emulator/: checkpoint_emulator.h  emulator.c  emulator.h
software/libs/fram/: fram.h  mspi.c  mspi.h
software/libs/jit/: jit_checkpoint.c  jit_checkpoint.h
software/libs/memtracker/: checkpoint_memtracker.c  checkpoint_memtracker.h  memtracker.c  memtracker.h
software/libs/mpatch/: .gitignore  CMakeLists.txt  README.md
software/libs/mpatch/bliss_allocator/: README.md  bliss_allocator.c  bliss_allocator.h  bliss_allocator_cfg.h  bliss_allocator_debug_util.c  bliss_allocator_debug_util.h  bliss_allocator_nvm.c  bliss_allocator_nvm.h  bliss_allocator_util.h
software/libs/mpatch/checkpoint/: checkpoint.c  checkpoint.h  checkpoint_cfg.h  checkpoint_logical_clock.h  checkpoint_logical_clock_nvm.c  checkpoint_selector.h  example_checkpoint_content.h
software/libs/mpatch/checkpoint/arch/: README.md
software/libs/mpatch/checkpoint/arch/arm/: barrier.h  checkpoint_arch.h  checkpoint_arch_cfg.h  checkpoint_setup.c  checkpoint_setup.h  checkpoint_setup_restore.h  checkpoint_util_mem.h  nvm.h  stackpointer.h
software/libs/mpatch/checkpoint/arch/arm/reg/: checkpoint_registers.c  checkpoint_registers.h  checkpoint_registers_nvm.c  checkpoint_svc.s
software/libs/mpatch/checkpoint/bss/: checkpoint_bss.c  checkpoint_bss.h  checkpoint_bss_cfg.h
software/libs/mpatch/checkpoint/code-id/: code_id.c  code_id.h  code_id_nvm.c  compile_time.h
software/libs/mpatch/checkpoint/data/: checkpoint_data.c  checkpoint_data.h  checkpoint_data_cfg.h
software/libs/mpatch/checkpoint/stack/: checkpoint_stack.c  checkpoint_stack.h  checkpoint_stack_cfg.h  checkpoint_stack_nvm.c
software/libs/mpatch/mpatch/: checkpoint_mpatch.c  checkpoint_mpatch.h  checkpoint_mpatch_cfg.h  mpatch.c  mpatch.h  mpatch_cfg.h  mpatch_nvm.c  mpatch_nvm.h  mpatch_util.h
software/libs/mpatch/test/unit/: CMakeLists.txt  run-tests.sh  test_cmocka.c  testcommon.h
software/libs/mpatch/test/unit/bliss_allocator/: test_bliss_allocator.c
software/libs/mpatch/test/unit/mpatch/: test_mpatch.c
software/libs/mpatch/test/unit/util/: asciitree.c  asciitree.h
software/scripts/: getEmulator.sh
software/scripts/patches/: gameboy_file-h.patch  gameboy_ub-c.patch  gameboy_ub-h.patch  rom.patch  z80_opcode-h.patch  z80_opcode_cb_func-h.patch  z80_opcode_func-h.patch  z80_opcode_goto-h.patch  z80_ub-c.patch  z80_ub-h.patch
